# stern

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
apps/kinetik-ui-showcase/: Cargo.toml
apps/kinetik-ui-showcase/assets/: THIRD_PARTY.md  viewport-1280x720.rgba
apps/kinetik-ui-showcase/src/: app.rs  artifacts.rs  editor.rs  lib.rs  live.rs  main.rs  offscreen.rs  raster.rs
apps/stern-demo/: Cargo.toml
apps/stern-demo/assets/: THIRD_PARTY.md
apps/stern-demo/src/: app_model.rs  edit_workspace.rs  graph_workspace.rs  lib.rs  timeline_workspace.rs
apps/stern-demo/tests/: app_model_contract.rs  dpi_icon_lookup_contract.rs  edit_workspace_screen_contract.rs  graph_journey_contract.rs  graph_workspace_screen_contract.rs  native_shell_contract.rs  overlay_recovery_journey_contract.rs  prohibited_techniques.rs  public_consumer_contract.rs  runtime_semantic_evidence.rs
apps/stern-demo/tools/: audit.rs  check-runtime-semantic-evidence.mjs  check-v1-contract.mjs  color-evidence.rs  contract.rs  json.rs  platform-smoke-record.mjs  platform-smoke-record.test.mjs  runtime-semantic-evidence.rs
crates/kinetik-ui/: Cargo.toml
crates/kinetik-ui-core/: Cargo.toml
crates/kinetik-ui-core/src/: accessibility.rs  actions.rs  debug.rs  identity.rs  input.rs  interaction.rs  layout.rs  lib.rs  liveness.rs  memory.rs  observers.rs  perf.rs  render.rs  runtime.rs  test_harness.rs  theme.rs  units.rs
crates/kinetik-ui-core/tests/: action_conformance.rs  async_liveness_conformance.rs  diagnostic_conformance.rs  domain_drag_action_conformance.rs  dpi_snap_conformance.rs  drag_threshold_conformance.rs  focus_keyboard_conformance.rs  harness.rs  input_ordering_conformance.rs  layout_invariants.rs  multi_transaction_selection_conformance.rs  observer_conformance.rs  ownership_reconciliation_conformance.rs  pointer_arbitration_conformance.rs  pointer_conformance.rs  render_color_conformance.rs  root_primary_press_ordinal_conformance.rs  runtime_spatial_conformance.rs  selection_modifier_conformance.rs  semantic_query_conformance.rs  staged_scroll_offset_conformance.rs  text_owner_mode_conformance.rs  transform_hit_conformance.rs  wheel_click_normalization_conformance.rs
crates/kinetik-ui-render/: Cargo.toml
crates/kinetik-ui-render/src/: lib.rs
crates/kinetik-ui-render/tests/: color_alpha_conformance.rs  resource_snapshot_conformance.rs  text_layout_reconciliation_conformance.rs
crates/kinetik-ui-text/: Cargo.toml
crates/kinetik-ui-text/src/: boundary.rs  cache.rs  edit.rs  engine.rs  fonts.rs  layout.rs  lib.rs  navigation.rs  selection.rs  store.rs  style.rs  tests.rs  undo.rs  viewport.rs
crates/kinetik-ui-text/tests/: shaped_key_conformance.rs  text_viewport_conformance.rs  undo_budget_conformance.rs  unicode_editing_conformance.rs  unicode_layout_conformance.rs
crates/kinetik-ui-vello/: Cargo.toml
crates/kinetik-ui-vello-winit/: Cargo.toml
crates/kinetik-ui-vello-winit/examples/: one_window.rs
crates/kinetik-ui-vello-winit/src/: config.rs  device.rs  error.rs  frame.rs  lib.rs  lifecycle.rs  native_texture.rs  presenter.rs  result.rs  tests.rs
crates/kinetik-ui-vello-winit/tests/: public_api_surface.rs
crates/kinetik-ui-vello/src/: command.rs  encoding.rs  geometry.rs  image.rs  lib.rs  renderer.rs  sanitize.rs  snapshot.rs  tests.rs  text.rs  texture.rs  translation.rs
crates/kinetik-ui-vello/tests/: render_color_conformance.rs  render_translation_conformance.rs  transform_recovery_conformance.rs
crates/kinetik-ui-widgets/: Cargo.toml
crates/kinetik-ui-widgets/src/: asset_browser.rs  chrome.rs  collection_actions.rs  collections.rs  components.rs  dock.rs  inline_edit.rs  inspector.rs  lib.rs  node_graph.rs  outliner.rs  overlays.rs  taxonomy.rs  timeline.rs  ui.rs  viewport.rs
crates/kinetik-ui-widgets/tests/: action_surface_conformance.rs  asset_browser_conformance.rs  asset_browser_widget_conformance.rs  basic_component_conformance.rs  chrome_scene_conformance.rs  collection_drag_context_conformance.rs  collections_virtualization_conformance.rs  component_taxonomy_conformance.rs  dock_conformance.rs  dock_controller_conformance.rs  dock_scene_conformance.rs  dropdown_conformance.rs  inline_edit_conformance.rs  inspector_picker_flow_conformance.rs  menu_bar_conformance.rs  menu_overlay_integration.rs  modal_dialog_conformance.rs  node_graph_conformance.rs  outliner_conformance.rs  overlay_conformance.rs  overlay_keyboard_conformance.rs  overlay_scene_conformance.rs  ownership_reconciliation_conformance.rs  pointer_arbitration_conformance.rs  property_grid_conformance.rs  public_api_surface.rs  runtime_spatial_conformance.rs  status_bar_conformance.rs  system_feedback_scene_conformance.rs  tab_strip_conformance.rs  text_field_conformance.rs  timeline_conformance.rs  toolbar_conformance.rs  ui_passive_identity.rs  viewport_conformance.rs  viewport_tool_scene_conformance.rs  viewport_widget_conformance.rs  virtual_table_conformance.rs  virtual_tree_conformance.rs
crates/kinetik-ui-winit/: Cargo.toml
crates/kinetik-ui-winit/src/: accessibility.rs  conversions.rs  input.rs  lib.rs  repaint.rs  requests.rs  shell.rs  tests.rs  time.rs  utils.rs  viewport.rs
crates/kinetik-ui-winit/tests/: shell_services.rs
crates/kinetik-ui/examples/: first_frame.rs
crates/kinetik-ui/src/: lib.rs
crates/kinetik-ui/tests/: public_api_surface.rs
crates/stern/: Cargo.toml
crates/stern-icon-atlas/: Cargo.toml
crates/stern-icon-atlas/src/: archive.rs  catalog.rs  discovery.rs  error.rs  generate.rs  ids.rs  lib.rs  linkage.rs  main.rs  model.rs  naming.rs  svg.rs
crates/stern-icon-atlas/tests/: ingestion.rs
crates/stern-icons-phosphor/: Cargo.toml  README.md
crates/stern-icons-phosphor/examples/: linkage-baseline.rs  linkage-with-one.rs
crates/stern-icons-phosphor/src/: lib.rs
crates/stern-identity-scan/: Cargo.toml
crates/stern-identity-scan/src/: args.rs  collation.rs  inventory.rs  lib.rs  main.rs  mask.rs  (+5 more)
crates/stern-vello/: Cargo.toml
crates/stern-vello-winit/: Cargo.toml
crates/stern-widgets/: Cargo.toml
(+557 files in other folders)
