[workspace]
resolver = "3"
members = [
    "crates/kinetik-ui-core",
    "crates/kinetik-ui-platform-winit",
    "crates/kinetik-ui-render-vello",
    "crates/kinetik-ui-text",
    "crates/kinetik-ui-widgets",
    "apps/kinetik-ui-showcase",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/kinetik/kinetik-ui"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
