[workspace]
resolver = "3"
members = [
    "crates/kinetik-ui",
    "crates/kinetik-ui-core",
    "crates/kinetik-ui-render",
    "crates/kinetik-ui-text",
    "crates/kinetik-ui-vello",
    "crates/kinetik-ui-widgets",
    "crates/kinetik-ui-winit",
    "apps/kinetik-ui-showcase",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/kinetik-gg/kinetik-ui"
readme = "README.md"
keywords = ["ui", "gui", "desktop", "editor", "graphics"]
categories = ["gui", "graphics", "rendering"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
