[workspace]
resolver = "3"
members = [
    "crates/stern",
    "crates/stern-core",
    "crates/stern-icon-atlas",
    "crates/stern-render",
    "crates/stern-text",
    "crates/stern-vello",
    "crates/stern-vello-winit",
    "crates/stern-widgets",
    "crates/stern-winit",
    "apps/stern-demo",
]

[workspace.package]
version = "1.0.0-rc.2.dev"
edition = "2024"
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/kinetik-gg/stern"
readme = "README.md"
keywords = ["ui", "gui", "desktop", "editor", "graphics"]
categories = ["gui", "graphics", "rendering"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
