[package]
name = "kinetik-ui-showcase"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
kinetik-ui-core = { path = "../../crates/kinetik-ui-core" }
kinetik-ui-text = { path = "../../crates/kinetik-ui-text" }
kinetik-ui-widgets = { path = "../../crates/kinetik-ui-widgets" }
minifb = "0.27.0"

[lints]
workspace = true
