[package]
name = "kinetik-ui-showcase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
ab_glyph = "0.2.32"
kinetik-ui = { version = "=0.1.0-alpha.1", path = "../../crates/kinetik-ui" }
pollster = "0.4.0"
vello = "0.9.0"
winit = "0.30.13"

[lints]
workspace = true
