[package]
name = "stern-demo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "runtime_semantic_evidence"
path = "tools/runtime-semantic-evidence.rs"

[dependencies]
pollster = "0.4.0"
stern = { version = "=1.0.0-rc.2.dev", path = "../../crates/stern" }
stern-icons-phosphor = { version = "=1.0.0-rc.2.dev", path = "../../crates/stern-icons-phosphor" }
winit = "0.30.12"

[dev-dependencies]
syn = { version = "2.0.117", features = ["full", "visit"] }

[lints]
workspace = true
