[package]
name = "kinetik-ui-text"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Text shaping, layout, editing state, and font assets for Kinetik UI"

[dependencies]
cosmic-text = { version = "0.19.0", default-features = false, features = ["std", "swash", "peniko"] }
kinetik-ui-core = { version = "=0.1.0-alpha.1", path = "../kinetik-ui-core" }
unicode-segmentation = "1.13.3"

[lints]
workspace = true
