[package]
name = "kinetik-ui-vello-winit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Vello and Winit window presenter for Kinetik UI"

[dependencies]
kinetik-ui-core = { version = "=0.1.0-alpha.1", path = "../kinetik-ui-core" }
kinetik-ui-render = { version = "=0.1.0-alpha.1", path = "../kinetik-ui-render" }
kinetik-ui-vello = { version = "=0.1.0-alpha.1", path = "../kinetik-ui-vello" }
vello = "0.9.0"
winit = "0.30.12"

[dev-dependencies]
pollster = "0.4.0"

[lints]
workspace = true
