[package]
name = "kinetik-ui-vello"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Vello renderer backend for Kinetik UI"

[dependencies]
kinetik-ui-core = { version = "=0.1.0-alpha.1", path = "../kinetik-ui-core" }
kinetik-ui-render = { version = "=0.1.0-alpha.1", path = "../kinetik-ui-render" }
kinetik-ui-text = { version = "=0.1.0-alpha.1", path = "../kinetik-ui-text" }
vello = "0.9.0"

[lints]
workspace = true
