[package]
name = "kinetik-ui-widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Reusable widgets and editor interaction models for Kinetik UI"

[dependencies]
kinetik-ui-core = { version = "=0.1.0-alpha.1", path = "../kinetik-ui-core" }
kinetik-ui-text = { version = "=0.1.0-alpha.1", path = "../kinetik-ui-text" }

[lints]
workspace = true
