[package]
name = "kinetik-ui-winit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Winit platform adapter for Kinetik UI"

[dependencies]
kinetik-ui-core = { version = "=0.1.0-alpha.1", path = "../kinetik-ui-core" }
winit = "0.30.12"

[lints]
workspace = true
