[package]
name = "stern-icon-atlas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Offline icon source ingestion and Rust definition tooling for Stern"

[dependencies]
flate2 = "1.1"
kurbo = "0.13"
quick-xml = "0.39"
serde_json = "1.0"
sha2 = "0.10"
svgtypes = "0.15"
tar = "0.4"

[lints]
workspace = true
