[package]
name = "stern-identity-scan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Repository identity conformance scanner for Stern"

[dependencies]
icu_collator = "=2.2.0"
serde_json = "1.0"
sha2 = "0.10"

[lints]
workspace = true
