[package]
name = "stern-vello-winit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Vello and Winit window presenter for Stern"

[dependencies]
stern-core = { version = "=1.0.0-rc.2.dev", path = "../stern-core" }
stern-render = { version = "=1.0.0-rc.2.dev", path = "../stern-render" }
stern-vello = { version = "=1.0.0-rc.2.dev", path = "../stern-vello" }
vello = "0.9.0"
winit = "0.30.12"

[dev-dependencies]
pollster = "0.4.0"
stern-winit = { version = "=1.0.0-rc.2.dev", path = "../stern-winit" }

[lints]
workspace = true
