[package]
name = "stern-vello"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Vello renderer backend for Stern"

[dependencies]
stern-core = { version = "=1.0.0-rc.2.dev", path = "../stern-core" }
stern-render = { version = "=1.0.0-rc.2.dev", path = "../stern-render" }
stern-text = { version = "=1.0.0-rc.2.dev", path = "../stern-text" }
vello = "0.9.0"

[dev-dependencies]
stern-widgets = { version = "=1.0.0-rc.2.dev", path = "../stern-widgets" }

[lints]
workspace = true
