[package]
name = "stern-widgets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Reusable widgets and editor interaction models for Stern"

[dependencies]
stern-core = { version = "=1.0.0-rc.2.dev", path = "../stern-core" }
stern-text = { version = "=1.0.0-rc.2.dev", path = "../stern-text" }

[dev-dependencies]
stern-icons-phosphor = { version = "=1.0.0-rc.2.dev", path = "../stern-icons-phosphor" }

[lints]
workspace = true
